# job-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_scrape.yml
api/: webhook.py
applier/: form_answerer.py  linkedin_applier.py
bot/: telegram_bot.py  webhook.py  whatsapp_bot.py
data/: qa_profile_template.yaml  resume_template.txt
generator/: cover_letter.py
matcher/: scorer.py
scheduler/: daily_run.py
scrapers/: handshake.py  jobspy_scraper.py
tracker/: setup_supabase.sql  supabase_client.py
utils/: url.py
